# PAMP-submissions-service

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt  run_tests.py
.github/workflows/: README.md  format.yml  test.yml
app/: main.py
app/config/: config.py
app/domains/detection/: __init__.py  router.py  similarity_detection_service.py
app/domains/health/: models.py  router.py
app/domains/repositories/: __init__.py  exceptions.py  submission_fetcher.py
app/domains/submissions/: __init__.py  detection_integration_service.py  submissions_controller.py  submissions_models.py  submissions_repository.py  submissions_service.py  (+1 more)
app/shared/: database.py  exceptions.py  services.py
resources/test/: test_file.py  test_file2.py
resources/test/language_samples/: CMakeLists.txt  Dockerfile  Makefile  go.mod  sample.ada  sample.asm  sample.c  sample.cpp  sample.cs  sample.css  sample.dart  sample.f90  sample.go  sample.graphql  sample.groovy  sample.hs  sample.html  sample.java  sample.jl  sample.js  sample.json  sample.kt  sample.lua  sample.m  sample.md  sample.ml  sample.pas  sample.php  sample.pl  sample.py  sample.r  sample.rb  sample.rs  sample.scala  sample.sh  sample.sol  sample.sql  sample.svelte  sample.swift  sample.toml  (+4 more)
tests/: test_api.py  test_clean_architecture.py  test_health.py  test_integration.py
tests/HTTP/: test_main.http  test_similarity_detection.http  test_submissions.http
tests/domains/: __init__.py  test_multilanguage_function_extraction.py
(+35 files in other folders)
